# libbase32

./: .gitignore  CMakeLists.txt  LICENSE  README.md  base32.c  base32.h  main.c
